Reestructura del Hero (nuevos contenedores para botones e imagen, texto con iconos y negritas)
Actualización de tarjetas de Servicios y Trabajos (padding, centrado de imágenes y object-fit)

Iconos del Proceso de Trabajo cambiados a “✓” y ajustes de márgenes/paddings

Secciones de Equipo y Testimonios con nuevos contenedores y carga de avatares reales

Formulario y mapa en .contact-container, inputs con estilo :focus y mapa con altura mínima de 300 px

Ajustes de responsividad (@media max-width:768px) y límite de ancho de .wrapper a 1200 px

Botones con margen horizontal y footer con borde superior para separar

--- a/index.html
+++ b/index.html
@@ -36,22 +36,19 @@
         <section class="hero">
           <h1>Somos Pymes Soft</h1>
           <p>
-            Especializados en crear bases de datos de PYMES<br />
-            ya no necesitaras registar el RUC del cliente nuevo solamente
-            consultar,<br />
-            con consejos de ciberseguridad<br />
-            y APIs para tu empresa
+            <strong>Especialistas en bases de datos de PYMES.</strong><br />
+            ✔️ Olvídate de registrar manualmente el RUC de tus nuevos clientes.<br><strong>Solo consulta, y listo.</strong>
+            🔒 Consejos de <strong>ciberseguridad</strong> incluidos para proteger tu información.<br />
+            🔗 <strong>APIs empresariales</strong> para integrar fácilmente y acelerar tus procesos.
           </p>
-          <a href="#contact" class="btn-primary"> Solicitar Demo </a>
-          <a href="#services" class="btn-secondary">Ver Servicios</a>
-          <div style="grid-column: span 6; margin: 24px auto">
-            <div>
-              <img src="src/images/PYMES.webp" alt="" />
-            </div>
+          <div class="buttons">
+            <a href="#contact" class="btn-primary">Solicitar Demo</a>
+            <a href="#services" class="btn-secondary">Ver Servicios</a>
+          </div>
+          <div class="image-container">
+            <img src="src/images/PYMES.webp" alt="Pymes Soft" />
           </div>
         </section>
-
-        <div class="separator"></div>
 
         <!-- Servicios -->
         <div class="section-title">Nuestros Servicios</div>
@@ -62,18 +59,12 @@
             <p>Autoguardado automático del RUC.</p>
           </div>
           <div class="service-item">
-            <img
-              src="src/images/cyber-security.png"
-              alt="Seguridad"
-            />
+            <img src="src/images/cyber-security.png" alt="Seguridad" />
             <h3>Consejos de ciberseguridad</h3>
             <p>Buenas prácticas para proteger tus datos.</p>
           </div>
           <div class="service-item">
-            <img
-              src="src/images/APIs-in-Postman-e1616786230943.webp"
-              alt="APIs"
-            />
+            <img src="src/images/APIs-in-Postman-e1616786230943.webp" alt="APIs" />
             <h3>APIs para la empresa</h3>
             <p>Integraciones personalizadas a tu medida.</p>
           </div>
@@ -85,8 +76,8 @@
         <div class="section-title">Trabajos realizados</div>
         <section id="works">
           <div class="case-card">
-            <div class="image-placeholder-after" >
-                 <img style="width: 150px; height: 150px;" src="src/images/sottoZero.png" alt="">
+            <div class="image-placeholder-after">
+              <img src="src/images/sottoZero.png" alt="Sotto Zero" />
             </div>
             <div class="case-info">
               <h4>Sotto Zero</h4>
@@ -95,7 +86,7 @@
           </div>
           <div class="case-card">
             <div class="image-placeholder-after">
-               <img src="src/images/cafeurbano.jpg" alt="">
+              <img src="src/images/cafeurbano.jpg" alt="Café Urbano" />
             </div>
             <div class="case-info">
               <h4>Café Urbano</h4>
@@ -146,7 +137,7 @@
           </div>
           <div class="member">
             <div class="photo"> 
-                <img src="src/images/bombom.webp" alt="">
+              <img src="src/images/bombom.webp" alt="Claudia Achucarro" />
             </div>
             <p>Claudia Achucarro<br /><small>Desarrollo Jr.</small></p>
           </div>
@@ -157,18 +148,24 @@
         <!-- Comentarios -->
         <section id="testimonials">
           <div class="section-title">Comentarios de nuestros clientes</div>
-          <div class="testimonial">
-            <div class="avatar"></div>
-            <div>
-              <p>"Lorem ipsum dolor sit amet."</p>
-              <small>- Lorem Ipsum, Empresa</small>
+          <div class="testimonials-container">
+            <div class="testimonial">
+              <div class="avatar">
+                <img src="src/images/nissei.jpg" alt="Cliente satisfecho" />
+              </div>
+              <div class="testimonial-content">
+                <p>"Excelente servicio! Nos ayudaron a optimizar nuestra base de datos y ahora todo funciona mucho más rápido. Muy recomendado."</p>
+                <small>- Casa nissei, Venta de tecnología y productos electrónicos de consumo.</small>
+              </div>
             </div>
-          </div>
-          <div class="testimonial">
-            <div class="avatar"></div>
-            <div>
-              <p>"Lorem ipsum dolor sit amet."</p>
-              <small>- Lorem Ipsum, Empresa</small>
+            <div class="testimonial">
+              <div class="avatar">
+                <img src="src/images/Tupi.png" alt="Cliente" />
+              </div>
+              <div class="testimonial-content">
+                <p>"Los consejos de ciberseguridad fueron invaluables. Ahora nos sentimos mucho más seguros con nuestros datos."</p>
+                <small>- TupiS.A, Comercial Express</small>
+              </div>
             </div>
           </div>
         </section>
@@ -178,24 +175,24 @@
         <!-- Contacto -->
         <section id="contact">
           <div class="section-title">Contacto</div>
-          <form class="contact-form">
-            <input type="text" placeholder="Nombre" required />
-            <input type="email" placeholder="Email" required />
-            <textarea rows="4" placeholder="Mensaje" required></textarea>
-            <button type="submit">Enviar</button>
-          </form>
-          <div class="map-wrapper">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d901.8256485574175!2d-57.583482343654424!3d-25.294035671236617!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da89bb28ab48b%3A0xb7f7859231503945!2sUCOM!5e0!3m2!1ses!2sus!4v1752006918235!5m2!1ses!2sus"
-              allowfullscreen
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            >
-            </iframe>
+          <div class="contact-container">
+            <form class="contact-form">
+              <input type="text" placeholder="Nombre" required />
+              <input type="email" placeholder="Email" required />
+              <textarea rows="4" placeholder="Mensaje" required></textarea>
+              <button type="submit">Enviar</button>
+            </form>
+            <div class="map-wrapper">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d901.8256485574175!2d-57.583482343654424!3d-25.294035671236617!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da89bb28ab48b%3A0xb7f7859231503945!2sUCOM!5e0!3m2!1ses!2sus!4v1752006918235!5m2!1ses!2sus"
+                allowfullscreen
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              >
+              </iframe>
+            </div>
           </div>
         </section>
-
-        <div class="separator"></div>
 
         <!-- Footer -->
         <footer>
