Cambio de imagen

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="#services" class="btn-secondary">Ver Servicios</a>
           </div>
           <div class="image-container">
-            <img src="src/images/1010066.jpg" alt="Pymes Soft" />
+            <img src="src/images/Pymes.webp" alt="Pymes Soft" />
           </div>
         </section>
 
